dist_man1_MANS=

if BUILD_CLANCYCOIND
  dist_man1_MANS+=clancycoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=clancycoin-qt.1
endif

if BUILD_CLANCYCOIN_CLI
  dist_man1_MANS+=clancycoin-cli.1
endif

if BUILD_CLANCYCOIN_TX
  dist_man1_MANS+=clancycoin-tx.1
endif

if ENABLE_WALLET
if BUILD_CLANCYCOIN_WALLET
  dist_man1_MANS+=clancycoin-wallet.1
endif
endif
